[package]
name = "def-pallets-api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
anyhow = "1.0"
sp-core = { git = "https://github.com/deepsafe/polkadot-sdk", branch = "deepsafe" }
sp-runtime = { git = "https://github.com/deepsafe/polkadot-sdk", branch = "deepsafe" }
precompile-utils = { git = "https://github.com/deepsafe/frontier.git", branch = "deepsafe" }
subxt = { git = "https://github.com/deepsafe/subxt.git", branch = "deepsafe" }
def-telemetry-client = { git = "https://github.com/deepsafe/def-telemetry-client", branch = "main", optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive", "full"] }
tokio = { version = "1.27.0", features = ["macros"] }
url = { version = "^2.2", features = ["serde"] }
hex = "0.4.2"
serde = { version = "1.0.195", default-features = false, features = ["alloc", "derive"] }
libsecp256k1 = { version = "0.3.2", default-features = false }
frame-system = { git = "https://github.com/deepsafe/polkadot-sdk", branch = "deepsafe" }

# local dependencies
node-primitives = { package = "def-node-primitives", git = "https://github.com/deepsafe/def-common" }
chain-bridge = { package = "def-chain-bridge", git = "https://github.com/deepsafe/def-common" }

# extra dependencies
ethereum = { version = "0.14.0", features = ["with-codec"]}

[dev-dependencies]
env_logger = "0.9"

[features]
telemetry = ["def-telemetry-client"]

# hotfix for https://github.com/paritytech/polkadot-sdk/issues/7653
[patch.'https://github.com/w3f/fflonk']
fflonk = { git = "https://www.github.com/w3f/fflonk", rev = "be95d4c971b1d15b5badfc06ff13f5c07987d484" }
