[package]
name = "sxn-pallets-api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
anyhow = "1.0"
sp-core = { git = "https://github.com/safexn/polkadot-sdk", branch = "deep" }
sp-runtime = { git = "https://github.com/safexn/polkadot-sdk", branch = "deep" }
precompile-utils = { git = "https://github.com/safexn/frontier.git", branch = "deep" }
subxt = { git = "https://github.com/safexn/subxt.git", branch = "deep" }
sxn-telemetry-client = { git = "https://github.com/safexn/sxn-telemetry-client", branch = "main", optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive", "full"] }
tokio = { version = "1.27.0", features = ["macros"] }
url = { version = "^2.2", features = ["serde"] }
hex = "0.4.2"
serde = { version = "1.0.195", default-features = false, features = ["alloc", "derive"] }
libsecp256k1 = { version = "0.3.2", default-features = false }
frame-system = { git = "https://github.com/safexn/polkadot-sdk", branch = "deep" }

# local dependencies
node-primitives = { package = "sxn-node-primitives", git = "https://github.com/safexn/sxn-common" }
chain-bridge = { package = "sxn-chain-bridge", git = "https://github.com/safexn/sxn-common" }

# extra dependencies
ethereum = { version = "0.14.0", features = ["with-codec"]}

[dev-dependencies]
env_logger = "0.9"

[features]
telemetry = ["sxn-telemetry-client"]

# hotfix for https://github.com/paritytech/polkadot-sdk/issues/7653
[patch.'https://github.com/w3f/fflonk']
fflonk = { git = "https://www.github.com/w3f/fflonk", rev = "be95d4c971b1d15b5badfc06ff13f5c07987d484" }
